# water-meter-value-recognition

./: CMakeLists.txt  README.md
detector/: CMakeLists.txt  meter_detector.cpp  meter_detector.h
functions/: CMakeLists.txt  functions_lib.h  functions_tests.h
functions/src/: OCR.cpp  functions.cpp
functions/tests_src/: tests.cpp
tests/: CMakeLists.txt  cw_test.cpp  dataset_test.cpp
